<resources>
    <string name="app_name">ReRecruit</string>
    <string name="username">Username</string>
    <string name="enter_name">Enter Name</string>
    <string name="location">Location</string>
    <string name="industry">Industry</string>
    <string name="enter_industry">Enter Industry:</string>
    <string name="register">Register</string>
    <string name="enter_username">Enter Username:</string>
    <string name="enter_organisation_name">Enter Organisation Name:</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_email_address">Enter Email Address:</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter Phone Number:</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="industry_preference">Industry Preference</string>
    <string name="role_preference">Role Preference</string>
    <string name="location_preference">Location Preference</string>
    <string name="reason_for_career_break">Reason for Career Break</string>
    <string name="enter_address">Enter Address</string>
    <string name="address">Address</string>
    <string name="enter_age">Enter Age</string>
    <string name="age">Age</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="applicant_registration">Applicant Registration</string>
    <string name="enter_location_pref">Enter Location</string>
    <string name="enter_industry_pref">Enter Industry</string>
    <string name="enter_role_pref">Enter Role</string>
    <string name="login">Login</string>
    <string name="already_registered_login">Already registered? \n Login</string>
    <string name="register_as_an_organisation">Register as an organisation</string>
    <string name="register_as_an_applicant">Register as an applicant</string>
    <string name="organisation_profile">Organisation Profile</string>
    <string name="applicant_profile">Applicant Profile</string>
    <string name="usernameLabel">Username:</string>
    <string name="emailLabel">Email:</string>
    <string name="password_label">Password:</string>
    <string name="organisation_name_label">Organisation Name:</string>
    <string name="phone_number_label">Phone Number:</string>
    <string name="industry_label">Industry:</string>
    <string name="first_name_label">First Name:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="age_label">Age:</string>
    <string name="address_label">Address:</string>
    <string name="reason_for_career_break_label">Reason for Career Break:</string>
    <string name="location_preference_label">Location Preference:</string>
    <string name="industry_preference_label">Industry Preference:</string>
    <string name="role_preference_label">Role Preference:</string>
    <string name="organisation_registration">Organisation Registration</string>
    <string name="job_listing">Job Listing</string>
    <string name="enter_role_title">Enter role title</string>
    <string name="location_label">Location:</string>
    <string name="role_title">Role Title:</string>
    <string name="enter_location">Enter Location:</string>
    <string name="role_requirements">Role Requirements:</string>
    <string name="enter_role_requirements">Enter role requirements</string>
    <string name="role_duties">Role Duties:</string>
    <string name="enter_role_duties">Enter role duties</string>
    <string name="enter_salary">Enter salary</string>
    <string name="upload">Upload</string>
    <string name="upload_a_job">Upload a Job</string>
    <string name="analyst">Analyst</string>
    <string name="cork">Cork</string>
    <string name="requirements">Requirements:</string>
    <string name="level_8_degree">Level 8 Degree</string>
    <string name="work_with_clients">Work with clients</string>
    <string name="salary">Salary:</string>
    <string name="_30_000">€30,000</string>
    <string name="view_job_listings">View Job Listings</string>
    <string name="apply">Apply</string>
    <string name="curriculum_vitae">Curriculum Vitae</string>
    <string name="work_history_1">Work History 1</string>
    <string name="position">Position:</string>
    <string name="organisation">Organisation:</string>
    <string name="number_of_years">Number of Years:</string>
    <string name="duties">Duties:</string>
    <string name="enter_position">Enter Position:</string>
    <string name="enter_number_of_years">Enter Number of Years</string>
    <string name="enter_duties">Enter duties:</string>
    <string name="work_history_2">Work History 2</string>
    <string name="education_history_1">Education History 1</string>
    <string name="institution">Institution:</string>
    <string name="certification">Certification:</string>
    <string name="enter_institution">Enter Institution:</string>
    <string name="enter_certification">Enter Certification:</string>
    <string name="education_history_2">Education History 2</string>
    <string name="awards">Awards:</string>
    <string name="enter_awards">Enter Award(s)</string>
    <string name="publications">Publication(s):</string>
    <string name="skills">Skills:</string>
    <string name="enter_skills">Enter Skills</string>
    <string name="enter_publication_s">Enter Publication(s)</string>
    <string name="interests">Interests:</string>
    <string name="enter_interests">Enter Interests</string>
    <string name="upload_a_cv">Upload a CV</string>
    <string name="view_cv">View CV</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="listing_status">Listing Status:</string>
    <string name="applications">Applications</string>
    <string name="name">Name</string>
    <string name="view_applications">View Applications</string>
    <string name="delete_account">Delete Account</string>
    <string name="additional">Additional:</string>
    <string name="enter_any_additional_relevant_information">Enter any additional relevant information:</string>
</resources>
